<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prefer_user"
        android:key="general_settings">
        <EditTextPreference
            android:dialogTitle="@string/user_name_dialog"
            android:key="user_name"
            android:summary="@string/user_name_summary"
            android:title="@string/user_name_title" />
        <ListPreference
            android:dialogTitle="Ordenar por"
            android:entries="@array/show_by"
            android:entryValues="@array/show_by_values"
            android:key="show_order"
            android:summary=""
            android:title="Ordenar productos por" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefer_show">
        <CheckBoxPreference
            android:key="notifications"
            android:summary="@string/notifications_summary"
            android:title="@string/notifications_title" />
    </PreferenceCategory>
</PreferenceScreen>